--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,2 +1,7 @@
-<h1>Home#top</h1>
-<p>Find me in app/views/home/top.html.erb</p>
+<div class="top-wrapper">
+    <div class="container">
+        <h1 class="top-title">タスク管理サービス「タス君」</h1>
+        <p>これはトップページです</p>
+        <p>タス君は仕事におけるあなたのタスクを完璧に管理します。</p>
+    </div>
+</div>
