--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.top-wrapper {
+    height: 500px;
+    width: 100%;
+    background-image: url("/homelogo.png");
+    background-size: cover;
+    color: white;
+}
+
+.top-title {
+    
+}
