--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,7 +1,8 @@
 <div class="top-wrapper">
-    <div class="container">
         <h1 class="top-title">タスク管理サービス「タス君」</h1>
-        <p>これはトップページです</p>
-        <p>タス君は仕事におけるあなたのタスクを完璧に管理します。</p>
-    </div>
+        <div class="top-content">
+            <p>これはトップページです</p>
+            <p>タス君は仕事におけるあなたのタスクを完璧に管理します。</p>
+        </div>
+    
 </div>
