--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,14 +1,16 @@
-<div class="about-wrapper">
-    <div class="container">
-        <h1>「タス君とは」</h1>
-        <p>これはaboutページです</p>
-        
-        <p>タス君の特徴</p>
-        <ul>
-            <li>タスクの追加、削除が簡単</li>
-            <li>優先順位によって自動ソート</li>
-            <li>タスクにかかった時間を自動計測、管理</li>
-        </ul>
+<div class="mx-auto" style="width:500px;">
+    <div class="about-wrapper">
+        <div class="container">
+            <h1>「タス君とは」</h1>
+            <p>これはaboutページです</p>
+            
+            <h2 class="border-bottom border-primary">タス君の特徴</h2>
+                <ul class="list-group" style="list-style:inside;">
+                    <li class="list-item mb-1">タスクの追加、削除が簡単</li>
+                    <li class="list-item mb-1">優先順位によって<span class="text-danger">自動ソート</span></li>
+                    <li class="list-item mb-1">タスクにかかった時間を<span class="text-danger">自動計測&管理</span></li>
+                    <li class="list-item mb-1">簡易的な<span class="text-danger">チャット機能あり</span></li>
+                </ul>
+            </div>
     </div>
 </div>
-
