--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,8 +1,9 @@
+<div id="top" class="mx-auto" style="width:400px;">
 <div class="top-wrapper">
         <h1 class="top-title">タスク管理サービス「タス君」</h1>
         <div class="top-content">
             <p>これはトップページです</p>
             <p>タス君は仕事におけるあなたのタスクを完璧に管理します。</p>
         </div>
-    
+</div>
 </div>
