--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-.top-wrapper {
+#top {
     background-image: url("/homelogo.png");
     background-size: cover;
     color: white;
@@ -11,11 +11,3 @@
     text-align: center;
 }
 
-.top-title {
-    padding-top: 150px;
-    margin-bottom: 20px;
-}
-
-.top-content p{
-    padding: 5px 0;
-}
