--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -8,7 +8,7 @@
 }
 
 .post-content {
-    border: 2px solid paleturquoise;
+    border: 2px solid black;
     padding: 10px 0;
 }
 
@@ -16,4 +16,23 @@
     display: inline-block;
     padding: 10px;
     background-color: paleturquoise;
+}
+
+.post-user-image {
+    height: 50px;
+    width: 50px;
+}
+
+.show-user-image {
+    height: 100px;
+    width: 100px;
+}
+
+.show-content {
+    display: flex;
+    margin: 10px 0;
+}
+
+.show-right p{
+    height: 100px;
 }
