--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.user-image {
+    width: 50px;
+    height: 50px;
+    border-radius: 5px;
+    padding: 0;
+}
+
+tr td {
+    padding: 0;
+}
+
+.show-image img{
+    width: 30%;
+    border-radius: 10px;
+}
+
