--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,12 +1,16 @@
-<div class="edit-wrapper">
-    <div class="container">
-        <h1>投稿の編集</h1>
-        <p>投稿を編集するページです</p>
+<div class="mx-auto" style="width: 300px;">
+    <h1>投稿の編集</h1>
+    <p>投稿を編集するページです</p>
+    <div class="card">
+         <div class="card-header">
+        投稿者：<%=@post.user.name%>
+         </div>
+    <div class="card-body">
+        <p class="card-title border-bottom">投稿内容</p>
         <%=form_tag("/posts/#{@post.id}/update") do %>
-        <div>
-            <textarea name="content"><%=@post.content%></textarea>
-            <input type="submit" value="保存する">
-        </div>
-        <% end %>
+         <textarea name="content" rows="5" cols="30"><%=@post.content%></textarea>
+        <input type="submit" value="保存する">
+         <% end %>
     </div>
 </div>
+    
