--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,11 +1,11 @@
-<div class="new-wrapper">
+<div class="mx-auto" style="width: 300px;">
     <div class="container">
-        <h1>新規投稿</h1>
+        <h1 class="mt-3">新規投稿</h1>
         <p>新規投稿するページです</p>
         <%=form_tag("/posts/create") do %>
         <div>
             <textarea name="content" cols="50" rows="10"></textarea>
-            <input type="submit" value="投稿する">
+            <p><input type="submit" value="投稿する"></p>
         </div>
         <% end %>
     </div>
