--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,13 +1,19 @@
-<div class="show-wrapper">
-    <div class="container">
-        <h1>投稿の詳細</h1>
-        <p>投稿の詳細を表示するページです</p>
-        <p class="post-content">
-            <%=@post.content%>
-        </p>
-        <div class="btn posts">
-            <%=link_to("編集する","/posts/#{@post.id}/edit")%>
-            <%=link_to("削除する","/posts/#{@post.id}/destroy",method: :post)%>
-        </div>
+<div class="mx-auto" style="width: 300px; background-image: url(/homelogo.png);
+    background-size: cover;
+    color: white;
+    height: 500px;
+    text-align: center;">
+    <h1>投稿の詳細</h1>
+    <p>投稿の詳細を表示するページです</p>
+    <div class="card">
+         <div class="card-header">
+        投稿者：<%=@post.user.name%>
+         </div>
+    <div class="card-body">
+        <p class="card-title border-bottom">投稿内容</p>
+        <h5 class="card-text mb-5"> <%=@post.content%></h5>
+        <button><%=link_to("編集する","/posts/#{@post.id}/edit")%></button>
+        <button><%=link_to("削除する","/posts/#{@post.id}/destroy",method: :post)%></button>
     </div>
 </div>
+    
