--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,18 +1,18 @@
-<div class="container">
-    <h1>ユーザ一覧</h1>
+<div class="mx-auto" style="width: 300px;">
+    <h1 class="mt-3">ユーザ一覧</h1>
     <p>ユーザを一覧で表示します</p>
-    <table border="1">
-        <tr>
-            <th>ID</th>
-            <th>名前</th>
-            <th>登録日</th>
-        </tr>
+        <div class="container">
+        <div class="row">
         <% @users.each do |user| %>
-            <tr>
-                <td><%=user.id %></td>
-                <td><%=link_to("#{user.name}","/users/#{user.id}")%></td>
-                <td><%=user.created_at%></td>
-            </tr>
+        <div class="card mb-3">
+            <img class="card-img-top" src="/images/<%=user.image%>" alt="">
+            <div class="card-body">
+                <p class="card-text"><%=link_to("#{user.name}","/users/#{user.id}")%></p>
+                <p class="card-text"><%=user.created_at%></p>
+            </div>
+        </div>
+        <div class="text-center">    
         <% end %>
-    </table>
+        </div>
+        </div>
 </div>
