--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,20 +1,31 @@
-<div class="show-wrapper">
-    <div class="container">
-        <h1>ユーザの詳細</h1>
-        <p>ユーザの詳細を表示するページです</p>
-        <div>
-        <table border="1">
-            <tr>
-                <td>ユーザ名:</td><td><%=@user.name%></td>
-            </tr>
-            <tr>
-                <td>メールアドレス:</td><td><%=@user.email%></td>
-            </tr>
-            <tr>
-                <td>パスワード:</td><td><%=@user.password%></td>
-            </tr>
-        </table>
-        <%=link_to("編集する","/users/#{@user.id}/edit")%>
+
+        <div class="mx-auto" style="width: 300px;">
+            <h1 class="mt-3">ユーザの詳細</h1>
+            <p>ユーザの詳細を表示するページです</p>
+            <div class="show-image">
+                <img class="rounded-circle " style="width:200px; height:200px" src="/images/<%=@user.image%>" alt="">
+            </div>
+            <table border="1" class="mt-3 mb-3">
+                <tr>
+                    <td>ユーザ名:</td><td><%=@user.name%></td>
+                </tr>
+                <tr>
+                    <td>メールアドレス:</td><td><%=@user.email%></td>
+                </tr>
+                <tr>
+                    <td>パスワード:</td><td><%=@user.password%></td>
+                </tr>
+                <tr>
+                    <td>権限:</td>
+                    <% if @user.authority == 1%>
+                    <td>PM</td>
+                    <% elsif @user.authority == 2%>
+                    <td>作業者</td>
+                    <% else%>
+                    <td>未定</td>
+                    <% end %>
+                </tr>
+            </table>
+            <button><%=link_to("編集する","/users/#{@user.id}/edit")%></button>
+            <button><%=link_to("退会する","/users/#{@user.id}/destroy")%></button>
         </div>
-    </div>
-</div>
